VERSION NOTES:

v0.8.2b

*****************
*** IMPORTANT ***
*****************

*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bell, bach.expr:
    makepitch function now treats negative degrees as descending steps (e.g. makepitch(-1, 0, 5) returns B4)

- bell: fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    :* operator returns null for non-positive repeat counts
    evaluation precedence of ** operator is now between + and *


- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"

- bach.pitchpack now treats negative degrees as descending steps (see the bell / bach.expr makepitch function)


***********************
*** VERSION CHANGES ***
***********************

authorization: now the code for a given year can be entered until January of the next year

- bell, bach.expr:
    makepitch function now treats negative degrees as descending steps (e.g. makepitch(-1, 0, 5) returns B4)

- bell: fixed various memory leaks
    primeser: the second argument may be left unset
    fixed parsing of pitch literals
    new built-in functions: mc2f, f2mc, minimum, maximum
    fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    dot operator can be preceded by whitespace
    _= operator optimized
    :* operator returns null for non-positive repeat counts
    map function works correctly with mindepth
    evaluation precedence of ** operator is now between + and *

- all the bell-compliant objects:
    fixed potential crash when reloading a file or re-opening the text editor
    "expr" and "lambda" message processing is now deferred, not deferlow-ed unless at object instantiation

- all the bell-compliant objects except bach.eval: